--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue小栗子</title>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=3130538f6ca7c76fa0fdd95b6c5446db"></script> 
   </head>
   <body>
     <div id="app"></div>
